# physics_simulation

./: README.md
data/: activation_order.txt  force_nodes - all the muscles.txt  friction_relations.txt  muscle_extremes.txt  muscles_positions.json  test_muscles_test_D23_v1_Left.csv  worm.msh
data/config/: chemicals.json  muscleConfiguration.json  muscleExtremesIndices.json  neuronIDmap.json  neuronSomaPos.json  neuronToNodeDistNorm1.json  nodeGaussianVar0.0001Dist0.05.json  nodeGaussianVar0.001Dist0.05.json  nodePosAngNorm.json  nodePosNorm.json  nodeToNeuronDistNorm1.json  sensoryMuscles.json  sensoryMusclesAll.json  sensoryPos.json  sensoryPosLAR.json
examples/: README.md  external muscle activation.scn  sin pattern + muscle activation.scn
src/: CGLinearSolverTraces.cpp  CGLinearSolverTraces.h  CGLinearSolverTraces.inl  CMakeLists.txt  Friction.cpp  Friction.h  Friction.inl  MuscleActivation.cpp  MuscleActivation.h  MuscleActivation.inl  PatternPlusFileActivation.cpp  PatternPlusFileActivation.h  PatternPlusFileActivation.inl  README.md  SiElegansAnimationLoop.cpp  SiElegansAnimationLoop.h  StandardTetrahedralFEMForceFieldTwoMaterials.cpp  StandardTetrahedralFEMForceFieldTwoMaterials.h  StandardTetrahedralFEMForceFieldTwoMaterials.inl  Stimuli.cpp  Stimuli.h  Stimuli.templ.cpp  Stimuli.templ.h  StimuliBarycentricPenalityContact.cpp  StimuliBarycentricPenalityContact.h  StimuliBarycentricPenalityContact.inl  StimuliChemo.cpp  StimuliChemo.h  StimuliMechano.cpp  StimuliMechano.h  StimuliPenalityContactForceField.cpp  StimuliPenalityContactForceField.h  StimuliPenalityContactForceField.inl  StimuliProprio.cpp  StimuliProprio.h  StimuliThermo.cpp  StimuliThermo.h  initPlugin.cpp  initPlugin.h
